Add language evaluation paragraph

--- a/problem-statement/problem-statement.tex
+++ b/problem-statement/problem-statement.tex
@@ -91,6 +91,8 @@ All the above problems will be implemented in a prototype to demonstrate the des
 The concept, as well as the prototype, assumes that all nodes are addressable by a fixed IP-address and port.
 Encryption and deduplication of data on the client will not be discussed within this study project since it is limited to uploading and retrieval of data.
 
+A short evaluation will be carried out at the beginning of the project in order to find an appropriate implementation language for the prototype. The current candidates for a suitable implementation language are Rust and Erlang.
+
 \section{License}
 The study project is inteded to be free software and will be published under the AGPL-License \cite{agplv3}.
 
