Add descision concerning time logs.

--- a/website/src/meetings/2017-09-18-kickoff.md
+++ b/website/src/meetings/2017-09-18-kickoff.md
@@ -35,6 +35,7 @@ minute-taker: rzimmerm
 - We created a new calendar on the HSR Exchange server for all events related to the project.
 - All Tasks (including project management, administration and documentation) must be created in the Redbackup Prototype Jira Project.
 - All Sprints end on Tuesday 10:00 am. The sprint planning for the next iteration starts at the same time.
+- We estimate and log work rounded to the next 15 minutes.
 
 ### 2. Infrastructure improvements
 - The new bamboo agent must create working builds.
