Add minimal project overview

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -18,7 +18,9 @@
 \maketitle
 
 \section{Project Overview}
+The goal of the Study Project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
 
+The project setting, vision, goals, as well as all other project boundaries, are described in depth in the problem statement \cite{problemstatement}.
 
 \section{Project Organization}
 
@@ -31,5 +33,8 @@
 \section{Infrastructure}
 
 \section{Quality Measures}
+
+\bibliographystyle{abbrv}
+\bibliography{refs}
 
 \end{document}
