Add section Time Budget

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -63,6 +63,17 @@ Due to the small team size, most roles are performed by both team members.
 \end{description}
 
 \section{Project Workflow}
+\subsection{Time Budget}
+
+The project started at the Kickoff on the 18.09.2017 and will be completed after 14 weeks at least at 22.12.2017.
+The two team members are available for 240 hours during this period which corresponds to a weekly time budget of 17.15 hour per person.
+
+Apart from the statutory holidays, there are no further absences planned. Statutory holidays do not affect the weekly time budget.
+
+\subsection{Schedule}
+\subsubsection{Iterations}
+\subsubsection{Milestones}
+\subsubsection{Meetings}
 
 
 \section{Risk Management}
