Add section meetings

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -71,10 +71,36 @@ The two team members are available for 240 hours during this period which corres
 Apart from the statutory holidays, there are no further absences planned. Statutory holidays do not affect the weekly time budget.
 
 \subsection{Schedule}
+The project schedule is based on elements of IBMs universal process (UP) as well as elements of SCRUM. 
+
+Due to the explorative nature of the project, the elaboration phase is quite long compared to the relatively short construction period.
 \subsubsection{Iterations}
+\textit{to be done}
 \subsubsection{Milestones}
+\textit{to be done}
 \subsubsection{Meetings}
 
+The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) from remote. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. 
+Sprint planning meetings are carried out every other week on Tuesday at 10:00.
+
+Regular Meetings with the project supervisor take place every Friday at 15:15 until 16:00 in Prof. Dr Mehta's office. The agenda must be sent via E-Mail to all participants at least 24 hours prior the meeting.
+
+Raphael Zimmermann will take meeting notes for every sprint and supervision meeting. Meeting minutes are published on the project website afterwards.
+
+\begin{table}[]
+	\centering
+	\caption{Meeting Time Budget}
+	\label{meeting-time-budget}
+	\begin{tabular}{lll}
+		\hline
+		\textbf{Meeting Type}             & \textbf{Total duration per person} & \textbf{Total duration for the team} \\ \hline
+		\textbf{Supervision Meetings}     & 14 hours                           & 28 hours                             \\
+		\textbf{Standup Meetings}         & 7 hours                            & 14 hours                             \\
+		\textbf{Sprint Planning Meetings} & 16 hours                           & 32 hours                             \\
+		\textbf{Retrospective}            & 3 hours                            & 6 hours                              \\ \hline
+		\textbf{Total}                    & 40 hours                           & 80 hours                            
+	\end{tabular}
+\end{table}
 
 \section{Risk Management}
 
