--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -4,6 +4,8 @@
 \geometry{verbose, marginparwidth=15mm, marginparsep=3mm, tmargin=25mm}
 \usepackage{tabulary}
 \usepackage{enumitem}
+\usepackage{graphicx}
+\usepackage{float}
 
 \usepackage{url}
 \title{Redbackup: Projectplan}
@@ -23,6 +25,24 @@ The goal of the Study Project is to provide a theoretical description of an appe
 The project setting, vision, goals, as well as all other project boundaries, are described in depth in the problem statement \cite{problemstatement}.
 
 \section{Project Organization}
+
+The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project supervisor and is therefore superior in the organigram.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\linewidth]{resources/organigram}
+	\caption[Organigram]{Project organigram}
+	\label{fig:organigram}
+\end{figure}
+
+\subsection{Roles}
+
+Due to the small team size, most roles are performed by both team members.
+
+\paragraph{Raphael Zimmermann} project management, software engineering, quality assurance.
+
+\paragraph{Fabian Hauser} infrastructure management, software engineering, quality assurance.
+
 
 
 \section{Project Workflow}
