--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -26,12 +26,12 @@ The project setting, vision, goals, as well as all other project boundaries, are
 
 \section{Project Organization}
 
-The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project supervisor and is therefore superior in the organigram.
+The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project supervisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\linewidth]{resources/organigram}
-	\caption[Organigram]{Project organigram}
+	\caption[Organigram]{Project organization chart}
 	\label{fig:organigram}
 \end{figure}
 
@@ -39,11 +39,10 @@ The project has a flat structure. All team members have the same strategic right
 
 Due to the small team size, most roles are performed by both team members.
 
-\paragraph{Raphael Zimmermann} project management, software engineering, quality assurance.
-
-\paragraph{Fabian Hauser} infrastructure management, software engineering, quality assurance.
-
-
+\begin{description}
+	\item[Raphael Zimmermann] project management, software engineering, quality assurance.
+	\item[Fabian Hauser] infrastructure management, software engineering, quality assurance.
+\end{description}
 
 \section{Project Workflow}
 
