Add project organization components subsection

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -6,6 +6,7 @@
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{multicol}
 
 \usepackage{url}
 \title{Redbackup: Projectplan}
@@ -23,6 +24,23 @@
 The goal of the Study Project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
 
 The project setting, vision, goals, as well as all other project boundaries, are described in depth in the problem statement \cite{problemstatement}.
+
+\subsection{Components}
+
+For a better overview and to allow us a sophisticated time assessment, we decided to group our tasks into categories i.e. JIRA components. Components represent documents or products which are to be released.
+
+Currently, tasks are separated into following components:
+
+\begin{multicols}{2}
+	\begin{itemize}
+		\item Final Submission Document
+		\item Management
+		\item Poster
+		\item Presentation
+		\item Project Plan
+		\item Prototype
+	\end{itemize}
+\end{multicols}
 
 \section{Project Organization}
 
