--- a/project-plan/refs.bib
+++ b/project-plan/refs.bib
@@ -6,3 +6,11 @@
 	urldate = {2017-09-10},
 	howpublished={\url{https://www.redbackup.org/problem-statement.pdf}},
 }
+
+@ONLINE{atlassian-opensource,
+	author = {{Atlassian Inc.}},
+	title = {{Open Source Services} by atlassian inc.},
+	year = 2017,
+	urldate = {2017-09-21},
+	howpublished={\url{https://developer.atlassian.com/opensource/}},
+}
