--- a/website/src/meetings/2017-09-22-kickoff.md
+++ b/website/src/meetings/2017-09-22-kickoff.md
@@ -3,48 +3,72 @@ layout: meeting-minutes.hbs
 date: 22.09.2017
 time: 15:15 - 16:00
 minute-taker: rzimmerm
+
 ---
 
 ## Attendees
 
-* Fabian Hauser, fhauser
-* Raphael Zimmermann, rzimmerm
-* Prof. Dr. Farhad Mehta, MeF
+- Fabian Hauser, fhauser
+- Raphael Zimmermann, rzimmerm
+- Prof. Dr. Farhad Mehta, MeF
 
 ## Agenda
 
 - Finalization of Task description
 - Project Management:
-    - Questions regarding role MeF and project information page https://wiki.hsr.ch/FarhadMehta/wiki.cgi?ProjectInformation
-        - See https://www.redbackup.org 
-        - No Passwords are required due to public read-only access to the Issue Tracker / CI / Source Repository.
-    - Discuss rough project plan with Milestones
+  - Questions regarding role MeF and project information page https://wiki.hsr.ch/FarhadMehta/wiki.cgi?ProjectInformation
+    - See https://www.redbackup.org 
+    - No Passwords are required due to public read-only access to the Issue Tracker / CI / Source Repository.
+  - Discuss rough project plan with Milestones
 - Language evaluation:
-    - We did not have the time to learn Rust and Erlang during the summer. To create a prototype in both languages will be too much work from our point of view. We must also discuss the (missing) tooling in both ecosystem (Code Coverage, Metrics etc.)
-- Infrastructure
-    - Demonstration of Project infrastructure (Redmine, Git, CI).
-    - How should we log time for Infrastructure setup since it is not exclusively for the SA (BA as well)?
-    - Discuss access to Project calendar
+  - We did not have the time to learn Rust and Erlang during the summer. To create a prototype in both languages will be too much work from our point of view. We must also discuss the (missing) tooling in both ecosystems (For example Code Coverage or Metrics)
+- Infrastructure:
+  - demonstration of Project infrastructure (Redmine, Git, CI).
+  - How should we log time for Infrastructure setup since it is not exclusively for the SA (BA as well)?
+  - Discuss access to Project calendar
 - Documentation:
-    - Are there any requirements for the document layout (HSR CI).
-    - We are not sure what the following paragraph from the [Project Information Page](https://wiki.hsr.ch/FarhadMehta/wiki.cgi?ProjectInformation) implies: "All submissions must conform to the relevant regulations of the Computer Science Department at HSR."
+  - Are there any requirements for the document layout (HSR CI).
+  - We are not sure what the following paragraph from the [Project Information Page](https://wiki.hsr.ch/FarhadMehta/wiki.cgi?ProjectInformation) implies: "All submissions must conform to the relevant regulations of the Computer Science Department at HSR."
 - Date and time for next meeting
 
-## Decisions
+## Discussions / Decisions
 
-- ...
+- Finalization of Task description
+  - The Task description is now final.
+- Project Management
+  - MeF acts as an observer in this project. We can also consult him for technical and non-technical advice on the project.
+  - Because we do not have an industry partner, we are free on how to manage the project.
+  - If possible, documents should be sent via E-Mail in plain text to MeF.
+  - The rough project plan is fine. MeF suggests changing the sprint duration in the first half of the project from two to one week. It might also be wise to decide early on the technology stack, for example on a stabile Backend (Git).
+  - We do not have to proceed the same way as in the engineering project, especially since this is an entirely different kind of project. UP-Phases do not make much sense since it is all "elaboration".
+  - The presentation is optional for the SA. For now, we think that it might be a good idea to do a presentation regardless.
+  - MeF remarks that use cases might not be the right tool to establish the requirements of this project. It might be better to describe the protocol/architecture scientifically (See [Writing Scientific Papers](https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf))
+- Language evaluation
+  - We will evaluate different Languages at the beginning of the project. The prototype, however, will be implemented in only one language (if possible). Only if we have major issues, the technology can be switched. (Eg. Erlang, Git, C, C++, Rust, Go, Python)
+- Infrastructure:
+  - We will investigate whether it might be possible to base on existing technologies as a backend (e.g. Git)
+  - MeF is fine with JIRA since we have already a history of using JIRA.
+  - We will discuss at the next meeting what kind of JIRA-Reports we should set up for MeF so that he can check if the project is on track.
+  - We will not log the work we invested in the project infrastructure setup since we use it for both, the SA as well as the BA.
+  - MeF sends invitations for further Meeting and therefore does not need access to the project calendar.
+- Documentation:
+  - There are only minimal Requirements for the CI. The Logo on the title page should be sufficient.
+  - The Paragraph "All submissions must conform to the relevant regulations of the Computer Science Department at HSR." means that all requirements stated in the [Anleitung Dokumentation SA](https://skripte.hsr.ch/Informatik/Fachbereich/Studienarbeit_Informatik/SAI/Informationen/Anleitung%20Dokumentation%20BA_SA_170905.pdf) must be met.
+  - A JIRA export (e.g. PDF) must be placed on the final submission CD.
+- Date and time for next meeting
+  - meetings will take place on Fridays if possible.
+  - The next Meeting takes place on 26.09.2017 at 17:00 at MeFs office.
 
 ## Open issues
 
 _open issues must be completed before the next meeting_
 
-- ...
+- Send the link to the project overview to MeF
 
 ## Upcoming absences
 
-- ...
+_no upcoming absences_
 
 ## Next Meeting
 
-- ...
-
+- [Weekly Meeting with MeF at 26.09 17:00 at his office](../2017-09-26-weekly-meeting)
