Change sentence structure/wording of the Infrastructure section

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -35,11 +35,11 @@ The project setting, vision, goals, as well as all other project boundaries, are
 
 \subsection{Project Management and Development}
 
-For our project management, document \& code storage and continuous integration/deployment we utilize an Atlassian stack (JIRA, BitBucket, Bamboo, Crowd)\cite{atlassian-opensource}.
+For project management, document/code storage and continuous integration/deployment we utilise the corresponding products by Atlassian (JIRA, BitBucket, Bamboo, Crowd)\cite{atlassian-opensource}.
 
-These applications are hosted on the HSR project server \textit{sinv-56017.edu.hsr.ch}, which runs a standard Ubuntu Linux 17.04.
+These applications are hosted on our HSR project server \textit{sinv-56017.edu.hsr.ch}, which runs a standard Ubuntu Linux 17.04.
 
-The project documents are written in LaTeX and versioned with git.
+The formal project documents are written in LaTeX and versioned with git. Other documentation (e.g. Meeting Minutes) are written in Markdown and published on the project website.
 
 \subsubsection{Development Tools}
 
@@ -50,9 +50,9 @@ The project documents are written in LaTeX and versioned with git.
 
 \subsection{Backup and Data Safety}
 
-An incremental backup of the project server \textit{sinv-56017.edu.hsr.ch} including our project code and documentation is created on the independent system \textit{pin1262031.hsr.ch} every night.
+An incremental backup of the project server \textit{sinv-56017.edu.hsr.ch} including the source code and documentation is created on an independent system (\textit{pin1262031.hsr.ch}) every night.
 
-As our documents and code are stored within a git repository, they are also available locally on all development systems.
+As our documents and code is stored in a git repository, they are also distributed on all development systems.
 
 
 
