Minor language fixes. Change Role from supervisor to advisor

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -27,7 +27,7 @@ The project setting, vision, goals, as well as all other project boundaries, are
 
 \subsection{Components}
 
-For a better overview and to allow us a sophisticated time assessment, we decided to group our tasks into categories i.e. JIRA components. Components represent documents or products which are to be released.
+For a better overview and to allow us a sophisticated time assessment, we decided to group tasks into categories, i.e. JIRA components. Components represent documents or products which are to be released.
 
 Currently, tasks are separated into following components:
 
@@ -44,7 +44,7 @@ Currently, tasks are separated into following components:
 
 \section{Project Organization}
 
-The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project supervisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
+The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project advisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
 
 \begin{figure}[H]
 	\centering
