--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -32,7 +32,8 @@ The project setting, vision, goals, as well as all other project boundaries, are
 
 \section{Risk Management}
 
-An assessment of our specific project risks is visible in Table \ref{tbl:project-risks}. To account for these risks, we reduce our weekly sprint time by the total weighted risk applicable to the planned task topics (on average approximately 20\%).
+An assessment of the project-specific risks is carried out in Table \ref{tbl:project-risks}. To account for these risks, we reduce our weekly sprint time by the total weighted risk applicable to the planned task topics (on average approximately 20\%). We also review the risk assessment after every sprint, adapt it and take measures if necessary.
+
 
 \begin{sidewaystable}
 	\centering
@@ -40,50 +41,50 @@ An assessment of our specific project risks is visible in Table \ref{tbl:project
 	\label{tbl:project-risks}
 	\begin{tabu}{r l X X r r r}
 		\hline
-		\# & Title & Description & Prevention / Reaction & Risk [h] & Probab. & = [h] \\ \hline
+		\# & Title & Description & Prevention / Reaction & Risk [h] & Probability & = [h] \\ \hline
 
 		%Infrastructure
 		1 & Problems with project infrastructure
-		  & The used project infrastructure is not or only partially available, or data loss occurs within management software
-		  & Clean tool setup, self hosting of tools to prevent third-party dependencies
+		  & The used project infrastructure is not or only partially available, or data loss occurs within management software.
+		  & Clean setup and self-hosting of the tools to prevent third-party dependencies.
 		  & 30 & 30\% & 9 \\
 
 		%Planning
 		2 & Communication errors
-		  & Errors due to miscommunication or misapprehension
-		  & Maintain a high level of interaction, clear specification of tasks responsibilities, conduct meetings if ambiguities exist
+		  & Errors due to miscommunication or misapprehension.
+		  & Maintain a high level of interaction, precise specification of tasks responsibilities, conduct meetings if ambiguities exist.
 		  & 10 & 40\% & 4\\
 
 		3 & Scope creep
-		  & The project's scope is extended over the project course
-		  & Clear definition of the project scope and limitations. Discuss changes with supervisor.
+		  & The project's scope is extended over the project course.
+		  & Define the project scope and limitations precisely. Discuss changes with the project advisor.
 		  & 30 & 30\% & 9\\
 
 		%Paper / Architecture
-		4 & Architecture does not scale
+		4 & The Architecture does not scale.
 		  & The chosen architecture does not scale to the expected data volume or node size
-		  & Invest more time in architecture design
+		  & Invest an adequate amount of time in architecture design.
 		  & 30 & 40\% & 12\\
 
 		5 & Missing architecture aspects
-		  & The architecture-whitepaper does not cover certain aspects necessary concepts of the prototype
-		  & Invest more time in architecture design
+		  & The architecture-whitepaper does not fully cover all necessary aspects of the prototype.
+		  & Invest an adequate amount of time in architecture design.
 		  & 15 & 60\% & 9\\
 
 		%Prototype
 		6 & Problems with technology stack
-		  & Parts of the selected technology stack are not well suited, incomplete or immature
-		  & Reflect technology suitability during the architecture draft
+		  & Parts of the selected technology stack are not well suited, incomplete or immature.
+		  & Reflect the suitability of the chosen technology during the architecture draft.
 		  & 60 & 60\% & 36\\
 
 		6 & Dependency Errors
-		  & There are errors/bugs in dependencies i.e. libraries.
-		  & Carefully select libraries, limit dependencies to a minimum
+		  & There are errors/bugs in third-party dependencies, i.e. libraries.
+		  & Carefully select libraries and limit thid-party dependency to a minimum.
 		  & 20 & 30\% & 6\\
 
 		7 & Missing dependency documentation
-		  & Selected libraries are lacking good documentation
-		  & The documentation should be a library selection criterion
+		  & Selected libraries are lacking proper documentation
+		  & The documentation quality of a library should be a selection criterion.
 		  & 15 & 40\% & 6\\
 
 		\hline
