--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -65,27 +65,27 @@ Due to the small team size, most roles are performed by both team members.
 \section{Project Workflow}
 \subsection{Time Budget}
 
-The project started at the Kickoff on the 18.09.2017 and will be completed after 14 weeks at least at 22.12.2017.
-The two team members are available for 240 hours during this period which corresponds to a weekly time budget of 17.15 hour per person.
+The project started with the Kickoff  Meeting on 18.09.2017 and will be completed after 14 weeks by not later than 22.12.2017.
+The two team members are available for 240 hours each during this period which corresponds to a weekly time budget of 17.15 hour per person.
 
 Apart from the statutory holidays, there are no further absences planned. Statutory holidays do not affect the weekly time budget.
 
 \subsection{Schedule}
-The project schedule is based on elements of IBMs universal process (UP) as well as elements of SCRUM. 
+The project schedule is an iterative process based on elements of SCRUM. 
 
-Due to the explorative nature of the project, the elaboration phase is quite long compared to the relatively short construction period.
-\subsubsection{Iterations}
-\textit{to be done}
-\subsubsection{Milestones}
-\textit{to be done}
+Due to the explorative nature of the project, we decided on a sprint duration of one week.
+\subsubsection{Iterations \& Milestones}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{resources/overview}
+	\caption{Overview of the 14 iterations}
+	\label{fig:overview}
+\end{figure}
+
 \subsubsection{Meetings}
 
-The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) from remote. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. 
-Sprint planning meetings are carried out every other week on Tuesday at 10:00.
-
-Regular Meetings with the project supervisor take place every Friday at 15:15 until 16:00 in Prof. Dr Mehta's office. The agenda must be sent via E-Mail to all participants at least 24 hours prior the meeting.
-
-Raphael Zimmermann will take meeting notes for every sprint and supervision meeting. Meeting minutes are published on the project website afterwards.
+The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) remotely. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. Sprint planning meetings are carried on Tuesday at 10:00. Table \ref{meeting-time-budget} shows an overview of the total meeting time budget.
 
 \begin{table}[]
 	\centering
@@ -101,6 +101,10 @@ Raphael Zimmermann will take meeting notes for every sprint and supervision meet
 		\textbf{Total}                    & 40 hours                           & 80 hours                            
 	\end{tabular}
 \end{table}
+
+Regular Meetings with the project advisor take usually place on Friday in Prof. Dr Mehta's office. The agenda must be sent via E-Mail to all participants at least 24 hours prior the meeting.
+
+Raphael Zimmermann will take meeting notes for every meeting. Meeting minutes are published on the project website afterwards.
 
 \section{Risk Management}
 
