Add Github Flow reference

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -113,7 +113,7 @@ An issue may be closed if \emph{all} of the following conditions are met:
 
 \subsection{Development}
 
-Since we are in a very early and agile phase we decided to use "Github flow", a straightforward development workflow.
+Since we are in a very early and agile phase we decided to use Github Flow\cite{github-flow}, a straightforward development workflow.
 
 Since the effective technology will be fixed later in the project, concrete coding guidelines, tools, metrics and an error policy will be defined when appropriate.
 
