--- a/project-plan/refs.bib
+++ b/project-plan/refs.bib
@@ -6,3 +6,11 @@
 	urldate = {2017-09-10},
 	howpublished={\url{https://www.redbackup.org/problem-statement.pdf}},
 }
+
+@ONLINE{github-flow,
+	author = {{Github Inc.}},
+	title = {{Github Flow}},
+	year = 2013,
+	urldate = {2017-09-25},
+	howpublished={\url{https://guides.github.com/introduction/flow/}},
+}
