Add development site and reference in the project plan

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -43,10 +43,7 @@ The formal project documents are written in LaTeX and versioned with git. Other 
 
 \subsubsection{Development Tools}
 
-\begin{itemize}
-	\item Git $\geq 2.0$, \url{https://git-scm.com/}
-	\item to be defined. %TODO: Add project tools when the programming language is defined
-\end{itemize}
+Since most development tools depend on the choosen technology and might change in the future, they are maintained separately on the project website \footnote{\url{https://www.redbackup.org/development/}}.
 
 \subsection{Backup and Data Safety}
 
