--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -80,7 +80,7 @@ The formal project documents are written in LaTeX and versioned with git. Other 
 
 \subsubsection{Development Tools}
 
-Since most development tools depend on the choosen technology and might change in the future, they are maintained separately on the project website \footnote{\url{https://www.redbackup.org/development/}}.
+Since most development tools depend on the chosen technology and might change in the future, they are maintained separately on the project website \footnote{\url{https://www.redbackup.org/development/}}.
 
 \subsection{Backup and Data Safety}
 
