Include Sprint overview into project plan

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{multicol}
+\usepackage{rotating}
 \usepackage{url}
 
 \title{Redbackup: Projectplan}
@@ -76,12 +77,24 @@ The project schedule is an iterative process based on elements of SCRUM.
 Due to the explorative nature of the project, we decided on a sprint duration of one week.
 \subsubsection{Iterations \& Milestones}
 
-\begin{figure}
+\begin{figure}[h!]
 	\centering
 	\includegraphics[width=1\linewidth]{resources/overview}
 	\caption{Overview of the 14 iterations}
 	\label{fig:overview}
 \end{figure}
+
+The goals and documents resulting from each sprint is shown in Figure \ref{fig:sprint-details}.
+
+\begin{figure}[h!]
+	\begin{sideways}
+	\includegraphics[scale=0.75]{resources/sprint_details}
+	\end{sideways}
+	\centering
+	\caption{Detailed overview with tasks and milestones of all 14 sprints.}
+	\label{fig:sprint-details}
+\end{figure}
+
 
 \subsubsection{Meetings}
 
