--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -149,7 +149,7 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 
 \begin{sidewaystable}
 	\centering
-	\caption[Risk assessment]{Risk assessment table. Time in hours over the duration of the whole project.}
+	\caption[Risk assessment]{Risk assessment table. Time in hours over the total project duration.}
 	\label{tbl:project-risks}
 	\begin{tabu}{r l X X r r r}
 		\hline
