--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -25,30 +25,12 @@
 \maketitle
 
 \section{Project Overview}
-The goal of the Study Project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
+The goal of the study project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
 
-The project setting, vision, goals, as well as all other project boundaries, are described in depth in the problem statement \cite{problemstatement}.
-
-\subsection{Components}
-
-For a better overview and to allow us a sophisticated time assessment, we decided to group tasks into categories, i.e. JIRA components. Components represent documents or products which are to be released.
-
-Currently, tasks are separated into following components:
-
-\begin{multicols}{2}
-	\begin{itemize}
-		\item Final Submission Document
-		\item Management
-		\item Poster
-		\item Presentation
-		\item Project Plan
-		\item Prototype
-	\end{itemize}
-\end{multicols}
 
 \section{Project Organization}
 
-The project has a flat structure. All team members have the same strategic rights and duties. Prof. Dr Farhad Mehta is the project advisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
+All team members have the same strategic rights and duties. Prof. Dr. Farhad Mehta is the project advisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
 
 \begin{figure}[H]
 	\centering
@@ -66,10 +48,28 @@ Due to the small team size, most roles are performed by both team members.
 	\item[Fabian Hauser] infrastructure management, software engineering, quality assurance.
 \end{description}
 
-\section{Project Workflow}
+\section{Project Management}
+\subsection{Components}
+
+For a better overview and to allow us a sophisticated time assessment, we decided to group tasks into categories, i.e. JIRA components. Components represent processes, documents and products which are to be released.
+
+Currently, tasks are separated into following components:
+
+\begin{multicols}{2}
+	\begin{itemize}
+		\item Final Submission Document
+		\item Concept Paper
+		\item Management
+		\item Poster
+		\item Presentation
+		\item Project Plan
+		\item Prototype
+	\end{itemize}
+\end{multicols}
+
 \subsection{Time Budget}
 
-The project started with the Kickoff  Meeting on 18.09.2017 and will be completed after 14 weeks by not later than 22.12.2017.
+The project started with the Kickoff Meeting on 18.09.2017 and will be completed after 14 weeks by 22.12.2017.
 The two team members are available for 240 hours each during this period which corresponds to a weekly time budget of 17.15 hour per person.
 
 Apart from the statutory holidays, there are no further absences planned. Statutory holidays do not affect the weekly time budget.
@@ -87,7 +87,7 @@ Due to the explorative nature of the project, we decided on a sprint duration of
 	\label{fig:overview}
 \end{figure}
 
-The goals and documents resulting from each sprint is shown in Figure \ref{fig:sprint-details}.
+The goals and milestones resulting from each sprint are shown in Figure \ref{fig:sprint-details}.
 
 \begin{figure}[h]
 	\begin{sideways}
@@ -101,7 +101,7 @@ The goals and documents resulting from each sprint is shown in Figure \ref{fig:s
 
 \subsubsection{Meetings}
 
-The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) remotely. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. Sprint planning meetings are carried on Tuesday at 10:00. Table \ref{meeting-time-budget} shows an overview of the total meeting time budget.
+The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) remotely. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. Sprint planning meetings are carried out on Tuesday at 10:00. Table \ref{meeting-time-budget} shows an overview of the total meeting time budget.
 
 \begin{table}[]
 	\centering
@@ -109,7 +109,7 @@ The team works every Tuesday (10:00 - 17:00) together in the study project room 
 	\label{meeting-time-budget}
 	\begin{tabular}{lll}
 		\hline
-		\textbf{Meeting Type}             & \textbf{Total duration per person} & \textbf{Total duration for the team} \\ \hline
+		\textbf{Meeting Type}             & \textbf{Total Duration per Person} & \textbf{Total Duration for the Team} \\ \hline
 		\textbf{Supervision Meetings}     & 14 hours                           & 28 hours                             \\
 		\textbf{Standup Meetings}         & 7 hours                            & 14 hours                             \\
 		\textbf{Sprint Planning Meetings} & 16 hours                           & 32 hours                             \\
@@ -118,20 +118,20 @@ The team works every Tuesday (10:00 - 17:00) together in the study project room 
 	\end{tabular}
 \end{table}
 
-Regular Meetings with the project advisor take usually place on Friday in Prof. Dr Mehta's office. The agenda must be sent via E-Mail to all participants at least 24 hours prior the meeting.
+Regular meetings with the project advisor take usually place on Friday in Prof. Dr. Mehta's office. The agenda must be sent via email to all participants at least 24 hours prior the meeting.
 
 Raphael Zimmermann will take meeting notes for every meeting. Meeting minutes are published on the project website afterwards.
 
 \section{Risk Management}
 
-An assessment of the project-specific risks is carried out in table \ref{tbl:project-risks} as time loss during the whole project. The risk matrix table \ref{tbl:risk-matrix} provides an overview of the risk weighting.
+An assessment of the project-specific risks is carried out in Table \ref{tbl:project-risks} as time loss during the whole project. The risk matrix in Table \ref{tbl:risk-matrix} provides an overview of the risk weighting.
 
 To account for these risks, we reduce our weekly sprint time by the total weighted risk applicable to the planned task topics (on average approximately 20\%). We also review the risk assessment after every sprint, adapt it and take measures if necessary.
 
 
 \begin{table}
 	\centering
-	\caption[Risk matrix]{The risk matrix. Numbers reference to the risk assessment table \ref{tbl:project-risks}}
+	\caption[Risk matrix]{The risk matrix. Numbers reference to the risk assessment Table \ref{tbl:project-risks}}
 	\label{tbl:risk-matrix}
 	\begin{tabu}{|l|c|c|c|}
 		\hline
@@ -160,7 +160,7 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 		  & Reflect the suitability of the chosen technology during the architecture draft.
 		  & 60 & 60\% & 36\\
 
-		2 & The Architecture does not scale.
+		2 & The architecture does not scale.
 		  & The chosen architecture does not scale to the expected data volume or node size
 		  & Invest an adequate amount of time in architecture design.
 		  & 30 & 40\% & 12\\
@@ -185,7 +185,7 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 		  & Invest an adequate amount of time in architecture design.
 		  & 15 & 60\% & 9\\
 
-		7 & Dependency Errors
+		7 & Dependency errors
 		  & There are errors/bugs in third-party dependencies, i.e. libraries.
 		  & Carefully select libraries and limit thid-party dependency to a minimum.
 		  & 20 & 30\% & 6\\
@@ -209,9 +209,8 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 
 For project management, document/code storage and continuous integration/deployment we utilise the corresponding products by Atlassian (JIRA, BitBucket, Bamboo, Crowd)\cite{atlassian-opensource}.
 
-These applications are hosted on our HSR project server \textit{sinv-56017.edu.hsr.ch}, which runs a standard Ubuntu Linux 17.04.
+These applications are hosted on our HSR project server (\textit{sinv-56017.edu.hsr.ch}), which runs a standard Ubuntu Linux 17.04.
 
-The formal project documents are written in LaTeX and versioned with git. Other documentation (e.g. Meeting Minutes) are written in Markdown and published on the project website.
 
 \subsubsection{Development Tools}
 
@@ -219,10 +218,9 @@ Since most development tools depend on the chosen technology and might change in
 
 \subsection{Backup and Data Safety}
 
-An incremental backup of the project server \textit{sinv-56017.edu.hsr.ch} including the source code and documentation is created on an independent system (\textit{pin1262031.hsr.ch}) every night.
+An incremental backup of the project server including the source code and documentation is created on an independent system (\textit{pin1262031.hsr.ch}) every night.
 
 As our documents and code is stored in a git repository, they are also distributed on all development systems.
-
 
 
 \section{Quality Measures}
@@ -240,7 +238,7 @@ To maintain a high standard of quality, we take the following measures:
 \end{multicols}
 
 \subsection{Documentation}
-The official documents such as the final submission document, the theoretical concept as well as this project plan are written in Latex and published on the project website as pdf documents. All other documents such as meeting minutes are written in markdown and made available in HTML on the website as well.
+The official documents such as the final submission document, the theoretical concept as well as this project plan are written in Latex and published on the project website \footnote{\url{https://www.redbackup.org}} as PDF documents. All other documents such as meeting minutes are written in Markdown and made available in HTML on the website as well.
 
 The sources are in both cases kept under version control in the same repository, which allows us to use the same tools and processes for documentation and code. The continuous integration server builds and publishes the website whenever new changes are pushed to the repository.
 
@@ -248,7 +246,7 @@ The sources are in both cases kept under version control in the same repository,
 Because the project plan allows for an iterative process, we use JIRA with its SCRUM-Features (such as sprint creation or boards) for project management.
 
 \subsubsection{Sprint Planning}
-Each sprint is mapped to JIRA, which allows the project advisor to trace the project progress. Sprints are represented as boards on which the current state of any issue is easily visible ("To Do", "In Progress", "Review", "Done").
+Each sprint is mapped to JIRA, which allows the project advisor to trace the project progress. Sprints are represented as boards on which the current state and assignee of any issue is easily visible ("To Do", "In Progress", "Review", "Done").
 
 
 \subsubsection{Definition of Done}
@@ -261,21 +259,21 @@ An issue may be closed if \emph{all} of the following conditions are met:
 	\item No warnings and errors by the compiler or any other quality tool.
 	\item A review is performed and accepted in a pull request.
 	\item The corresponding branch is merged into the stable branch (e.g. master).
-	\item All documents are up to date.
+	\item All documents are up to date including the project website.
 	\item Reasonable unit and integration tests exist and pass.
 	\item The complete continuous integration pipeline works.
-	\item All time spent on the issue is logged.
+	\item All time is logged.
 \end{itemize}
 
 \subsection{Development}
 
-Since we are in a very early and agile phase we decided to use Github Flow\cite{github-flow}, a straightforward development workflow.
+Since we are in a very early and agile stage we decided to use Github Flow\cite{github-flow}, a straightforward development workflow.
 
 Since the effective technology will be fixed later in the project, concrete coding guidelines, tools, metrics and an error policy will be defined when appropriate.
 
 
 \subsection{Testing}
-All functionality must be testable automatically in continuous integration. Any non-trivial method must be verified with unit tests.
+All functionality must be automatically testable using continuous integration. Any non-trivial function/method must be verified with unit tests.
 
 Integration tests verify extended test scenarios.
 
