--- a/project-plan/refs.bib
+++ b/project-plan/refs.bib
@@ -1,6 +1,6 @@
 @ONLINE{problemstatement,
 	author = {Fabian Hauser and Raphael Zimmermann},
-	title = {{Task Description} of redbackup: a redundant distributed backup system prototype},
+	title = {{Task Description} ''redbackup: a redundant distributed backup system prototype''},
 	year = 2017,
 	urldate = {2017-09-10},
 	howpublished={\url{https://www.redbackup.org/problem-statement.pdf}},
@@ -8,7 +8,7 @@
 
 @ONLINE{atlassian-opensource,
 	author = {{Atlassian Inc.}},
-	title = {{Open Source Services} by atlassian inc.},
+	title = {{Open Source Services by Atlassian Inc.}},
 	year = 2017,
 	urldate = {2017-09-21},
 	howpublished={\url{https://developer.atlassian.com/opensource/}},
