--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -140,7 +140,16 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-\emph{The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots}
+\begin{itemize}
+	\item Main Idea
+	\item Brief description of what is done
+	\item  Brief description of the results
+	\item  Remember: Abstract = decision aid.
+	\item  No References
+	\item  Present Tense
+	\item  See HSR-Module RKI
+	\item  See Chapter 2.3 in \url{https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf}
+\end{itemize}
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -149,7 +158,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 
 \chapter{Management Summary}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-\emph{The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots}
+\emph{The Thesis Management is written here (and usually kept to just this page).}
 
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
@@ -158,6 +167,11 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous support.
+
+\begin{itemize}
+	\item we might want to use author-date citations over plain numbering.
+	\item Acknowledge HSR and reviewers...
+\end{itemize}
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -181,11 +195,14 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 
 \pagestyle{thesis} % Return the page headers back to the "thesis" style
 
+\include{chapters/1_introduction}
+\include{chapters/2_background}
+\include{chapters/3_our_approach}
+\include{chapters/4_discussion_and_conclusion}
 \include{chapters/chapter1}
-%\include{chapters/chapter2}
 
 \subsubsection*{} %This is needed, so that not the next page is referenced.
-\label{lastpage}
+\label{lastpage} %TODO: This label should be positioned below above the last paragraph
 
 \cleardoublepage
 %----------------------------------------------------------------------------------------
