Exclude Projektplan header section from latexdiff

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -14,7 +14,7 @@
 
 
 \begin{document}
-
+\begin{DIFnomarkup}
 \frontmatter
 
 \maketitle
@@ -25,7 +25,7 @@
 
 \tableofcontents % Prints the main table of contents
 
-
+\end{DIFnomarkup}
 \mainmatter
 \chapter{Project Overview}
 The goal of the study project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
