--- a/latex_template.cls
+++ b/latex_template.cls
@@ -128,6 +128,11 @@
 }%
 
 %----------------------------------------------------------------------------------------
+%	LaTexDiff Helpers
+%----------------------------------------------------------------------------------------
+\newenvironment{DIFnomarkup}{}{}
+
+%----------------------------------------------------------------------------------------
 %	CLASS OPTIONS
 %----------------------------------------------------------------------------------------
 
