Add new title page to project plan

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -8,16 +8,40 @@
 \usepackage{rotating}
 \usepackage{url}
 
-\title{Redbackup: Projectplan}
-
-\date{\today}
-
-
 \begin{document}
 
 \frontmatter
 
-\maketitle
+
+\begin{titlepage}
+\begin{center}
+\vspace*{.06\textheight}
+
+\HRule \\[0.4cm] % Horizontal line
+{\huge \bfseries Redbackup: Project Plan\par}\vspace{0.4cm} % Thesis title
+\HRule \\[1.5cm] % Horizontal line
+
+\begin{minipage}[t]{0.4\textwidth}
+\begin{flushleft} \large
+\emph{Authors:}\\
+\authorname % Author name - remove the \href bracket to remove the link
+\end{flushleft}
+\end{minipage}
+\begin{minipage}[t]{0.4\textwidth}
+\begin{flushright} \large
+\emph{Advisor:} \\
+\supname
+\end{flushright}
+\end{minipage}\\[3cm]
+
+\vfill
+
+{\large Autumn Term 2017}\\[4cm] % Date
+\includegraphics{resources/logo_hsr} % University/department logo - uncomment to place it
+
+\vfill
+\end{center}
+\end{titlepage}
 
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS PAGES
