Use  instead of writing

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -265,7 +265,7 @@ To maintain a high standard of quality, we take the following measures:
 \end{multicols}
 
 \section{Documentation}
-The official documents such as the final submission document, the theoretical concept as well as this project plan are written in Latex and published on the project website \footnote{\url{https://www.redbackup.org}} as PDF documents. All other documents such as meeting minutes are written in Markdown and made available in HTML on the website as well.
+The official documents such as the final submission document, the theoretical concept as well as this project plan are written in \LaTeX and published on the project website \footnote{\url{https://www.redbackup.org}} as PDF documents. All other documents such as meeting minutes are written in Markdown and made available in HTML on the website as well.
 
 The sources are in both cases kept under version control in the same repository, which allows us to use the same tools and processes for documentation and code. The continuous integration server builds and publishes the website whenever new changes are pushed to the repository.
 
