MeF is not superior in the project but an advisor

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -57,7 +57,7 @@ The goal of the study project is to provide a theoretical description of an appe
 
 \chapter{Project Organization}
 
-All team members have the same strategic rights and duties. Prof. Dr. Farhad Mehta is the project advisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
+All team members have the same strategic rights and duties. Prof. Dr. Farhad Mehta is our project advisor as visible in Figure \ref{fig:organigram}.
 
 \begin{figure}[H]
 	\centering
